<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.679" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vp1"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:orientation="horizontal"
        android:background="@color/cardview_light_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView"
        app:layout_constraintVertical_bias="0.727">

        <RadioButton
            android:id="@+id/mainpage"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:button="@drawable/newsss"
            android:gravity="center"
            android:text="@string/table1" />

        <RadioButton
            android:id="@+id/pragram"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:button="@drawable/news"
            android:text="@string/table2" />

        <RadioButton
            android:id="@+id/go"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:button="@drawable/newss"
            android:text="@string/table3" />

    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>